force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/NCMT_RedirectCustomObjectpage__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NCMT_RedirectCustomObjectpage</label>
</CustomObject>