force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Building_Selection__c.field-meta.xml
<CustomField>
    <fullName>Building_Selection__c</fullName>
    <description>From NCMT Project, Building Selection field ID.</description>
    <label>Building Selection</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>