force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Estimate_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Type_ID__c</fullName>
    <description>For NCMT Project, Estimate Type Proj field</description>
    <label>Estimate Type ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>