force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Housing_Plan_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Project_Name__c</fullName>
    <description>Used to auto-populate Project lookup on NCMT Housing Plan for Move Cost Module</description>
    <label>Housing Plan Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>