force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/HP_Move_Cost_Module__c.field-meta.xml
<CustomField>
    <fullName>HP_Move_Cost_Module__c</fullName>
    <description>Used to auto-populate the Move Cost Module field on NCMT Housing Plan for records created within the Move Cost Module</description>
    <label>HP Move Cost Module</label>
    <length>20</length>
    <type>Text</type>
</CustomField>