force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/LPOE_Other_Cost_RType__c.field-meta.xml
<CustomField>
    <fullName>LPOE_Other_Cost_RType__c</fullName>
    <description>LPOE Other Cost Record Type ID</description>
    <label>LPOE Other Cost RType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>