force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/NCMT_OthCost_UI__c.field-meta.xml
<CustomField>
    <fullName>NCMT_OthCost_UI__c</fullName>
    <description>For NCMT Other Cost, object URL</description>
    <label>NCMT OthCost_UI</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>