force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/NCMT_OtherCost_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_OtherCost_ID__c</fullName>
    <description>For NCMT Other Cost object ID</description>
    <label>NCMT_OtherCost_ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>