force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <label>NCMT Project ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>