force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/NCMT_Tree_Parent_Node_Lkid__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Tree_Parent_Node_Lkid__c</fullName>
    <description>NCMT Tree Structure Parent Node ID with CF appended</description>
    <label>NCMT Tree Parent Node Lkid</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>