force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/NCMT_Tree_Struc_UI__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Tree_Struc_UI__c</fullName>
    <description>NCMT Tree Structure UI ID</description>
    <label>NCMT Tree Struc UI</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>