force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Other_Capital_Renewal_Cost_RType__c.field-meta.xml
<CustomField>
    <fullName>Other_Capital_Renewal_Cost_RType__c</fullName>
    <description>for TCO - user option</description>
    <label>Other Capital Renewal Cost RType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>