force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Other_Direct_Cost_RType__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Cost_RType__c</fullName>
    <description>Other Direct Cost Record Type ID</description>
    <label>Other Direct Cost RType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>