force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Other_Project_Cost_RType__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Cost_RType__c</fullName>
    <description>Other Project Costs Record Type ID</description>
    <label>Other Project Cost RType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>