force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Project_Phases_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Phases_ID__c</fullName>
    <description>From NCMT Project, Project Phases field ID</description>
    <label>Project Phases ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>