force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Project_SubPhase_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_SubPhase_ID__c</fullName>
    <description>From NCMT Project, Project SubPhases Field ID</description>
    <label>Project SubPhase ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>