force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Project_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_ID__c</fullName>
    <label>Project Type ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>