force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/Purpose_Of_Estimate_ID__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Estimate_ID__c</fullName>
    <label>Purpose_Of_Estimate_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>