force-app/main/default/objects/NCMT_RedirectCustomObjectpage__c/fields/TreeStructure_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>TreeStructure_Name_ID__c</fullName>
    <description>ID of the custom Name field on the Tree Structure object to creating a new tree structure</description>
    <label>Tree Structure Name ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>